# advent-of-code

2023/1/src/: lib.rs  part1.rs  part2.rs
2023/2/: Cargo.toml  build.rs
2023/2/benches/: benchmarks.rs
2023/2/src/: lib.rs  parser.rs  part1.rs  part2.rs
year/day/: Cargo.toml
