[package]
name = "day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
nom = "7.1.3"
dhat = "0.3.2"

[build-dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "day"
path = "benches/benchmarks.rs"
harness = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = []